--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,7 @@ a {
 
 body {
   /*background-color: darkslategray;*/
-  background-color: #FF4F00;
+  background-color: #DF4300;
 }
 
 .nav.navbar-nav.navbar-left li {
